Delete solucion
